[package]
name = "hen"
version = "0.2.0"
authors = ["Jan Weidner <jw3126@gmail.com>"]

[dependencies]
regex = "1.0"
sha3 = "0.7.3"
rayon = "1.0"
num_cpus = "1.8.0"
serde_json = "1.0"
serde = "1.0.45"
serde_derive = "1.0.45"
clap = "2.31"
rand = "0.4.2"
# serde_yaml = "0.7"
itertools = "0.7.3"

[dev-dependencies]
assert_cli = "0.5"
quickcheck = "0.6"
approx = "0.1"
tempfile = "3"
